# sfutils

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  base.hpp  encoding_cvt.hpp  unicode_string.hpp  usym_width.hpp
cmake/: check_features.cmake  common_options.cmake  common_options_and_procject_config.cmake  cpp-unicodelib.cmake  sfutils_config.h.in  wcwidth.cmake
include/sfutils/base/: CMakeLists.txt  base.hpp  function_traits.hpp
include/sfutils/unicode/: CMakeLists.txt  encoding_cvt.hpp  unicode_string.hpp  ustring_iterator.hpp  usym_width.hpp
sfutils_unicode/: CMakeLists.txt  encoding_cvt.hpp  unicode_string.hpp  usym_width.hpp
test/: CMakeLists.txt  base.hpp  encoding_cvt.cpp  ustring.cpp  wcwidth.cpp
unicode/: unicode_string.hpp  usym_width.hpp
